--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>FizzBuzz For</h1>
-    <script src="./app.jss"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
